# ev_pricat_converter

./: .env.example  .gitignore  CLAUDE.md  README.md  nixpacks.toml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  admin.py  config.py  utils.py
app/models/: __init__.py  api_nutzung.py  attributgruppe.py  audit_log.py  branche.py  branche_branchenrolle.py  branchenrolle.py  changelog_eintrag.py  config.py  eigenschaft_definition.py  eigenschaft_wert.py  email_template.py  fragebogen.py  help_text.py  hersteller.py  komponente.py  kunde.py  kunde_benutzer.py  kunde_branche.py  kunde_branchenrolle.py  kunde_verband.py  lieferant.py  lieferant_branche.py  lookup_wert.py  mailing.py  marke.py  medium.py  modul.py  modul_erp.py  page_visit.py  password_token.py  produkt.py  produkt_lookup.py  projekt.py  rolle.py  schulung.py  schulungsbuchung.py  schulungsdurchfuehrung.py  schulungsthema.py  sub_app.py  (+6 more)
app/routes/: __init__.py  abrechnung.py  admin.py  api_projekte.py  api_upload.py  auth.py  benutzer.py  content_generator.py  dialog.py  dialog_admin.py  kunden.py  lieferanten_auswahl.py  mailing.py  mailing_admin.py  main.py  passwort.py  projekte_admin.py  schulungen.py  schulungen_admin.py  support.py  (+1 more)
backup/: pricat Kopie.db
docs/: CHANGELOG.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  PRD_POC.md  PRD_Software-Architektur.md  ROADMAP.md  musterlieferant_stammdaten.csv  pricat_1872_Lego Spielwaren GmbH_0.csv
instance/: ev247.db
scripts/: generate_icon_list.py  import_attributgruppen.py  import_produkt_codelisten.py
tests/: test.md
(+248 files in other folders)
