[project]
name = "pricat-converter"
version = "1.0.0"
description = "VEDES PRICAT to Elena import format converter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-login>=0.6.2",
    "flask-wtf>=1.2.0",
    "flask-admin>=1.6.0",
    "email-validator>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0", # PostgreSQL
    "pymysql>=1.1.0", # MariaDB/MySQL
    # Excel Export
    "openpyxl>=3.1.0",
    # Async HTTP Client
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # Environment Variables
    "python-dotenv>=1.0.0",
    # Cryptography (FTP passwords)
    "cryptography>=41.0.0",
    # Production Server
    "gunicorn>=21.0.0",
    # S3 Storage
    "boto3>=1.34.0",
    # Markdown Rendering for Help Texts
    "markdown>=3.5",
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
